# omniagent-android

./: .gitignore  LICENSE  README.md  SECURITY.md  build.gradle  build_errors.txt  build_errors_2.txt  build_errors_utf8.txt  gradle.properties  settings.gradle  test_resume_verify.py
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/omniagent/app/: MainActivity.kt  OmniAgentApp.kt  OmniAgentApplication.kt
app/src/main/java/com/omniagent/app/core/model/: AnalysisLog.kt  Models.kt
app/src/main/java/com/omniagent/app/core/notification/: NotificationHelper.kt
app/src/main/java/com/omniagent/app/core/util/: ResumePdfExporter.kt
app/src/main/java/com/omniagent/app/data/local/: AnalysisLogDao.kt  OmniAgentDatabase.kt
app/src/main/java/com/omniagent/app/data/repository/: OmniAgentRepository.kt
app/src/main/java/com/omniagent/app/di/: AppContainer.kt
app/src/main/java/com/omniagent/app/domain/repository/: AnalysisRepository.kt
app/src/main/java/com/omniagent/app/engine/: LlamaEngine.kt  ModelDownloadManager.kt
app/src/main/java/com/omniagent/app/kernel/: PythonKernelManager.kt
app/src/main/java/com/omniagent/app/security/: AccessControl.kt  BiometricAuthManager.kt  CryptoManager.kt  FileSandbox.kt
app/src/main/java/com/omniagent/app/service/: AnalysisService.kt  BeastModePulseManager.kt  DeviceHealthManager.kt  FloatingAIService.kt  GuardianOverlayManager.kt  NeuralShieldManager.kt  OmniAccessibilityLinkScanner.kt  OmniGuardianService.kt  OmniNotificationListener.kt  PermissionWardenManager.kt  ScanHistoryManager.kt  SecurityNotificationManager.kt  SensorGuardianManager.kt
app/src/main/java/com/omniagent/app/ui/common/: CodeCanvas.kt  DashboardComponents.kt  TypingText.kt
app/src/main/java/com/omniagent/app/ui/features/admin/: AdminDashboardScreen.kt
app/src/main/java/com/omniagent/app/ui/features/career/: CareerDashboard.kt  CareerModuleScreens.kt  ResumeBuilderForm.kt  ResumePreviewScreen.kt  ResumeTemplateSelection.kt
app/src/main/java/com/omniagent/app/ui/features/chat/: ChatScreen.kt
app/src/main/java/com/omniagent/app/ui/theme/: Colors.kt  Theme.kt
app/src/main/java/com/omniagent/app/viewmodel/: OmniAgentViewModel.kt
app/src/main/java/com/omniagent/app/widget/: OmniAgentWidgetProvider.kt
app/src/main/java/com/omniagent/app/worker/: CyberScanWorker.kt
app/src/main/python/: coding_engine.py  cyber_engine.py  duck_engine.py  general_engine.py  intent_classifier.py  resume_engine.py  startup_engine.py
app/src/main/res/drawable/: bg_dynamic_island_pill.xml  bg_floating_chat.xml  bg_input_row.xml  bg_send_btn.xml  circle_green.xml  ic_launcher_foreground.xml  ic_orb_pulse.xml  rounded_glass_bg.xml  widget_background.xml
app/src/main/res/layout/: guardian_threat_overlay.xml  layout_floating_ai.xml  neural_shield_guide_overlay.xml  omni_widget.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  omni_widget_info.xml
(+7 files in other folders)
